reasoning_transformations/ClassEval/Transformations/logs/ClassEval_5.log
STARTING AT 2024-10-15 02:09:57.157937
[START] processing file: ClassEval_5
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 0.000s

OK

Result: ['tests_pass']
tests_pass ClassEval_5 /home/yang/Benchmark/dataset/classeval/code//ClassEval_5.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 0.000s

OK

Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 0.000s

OK

Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 0.000s

OK

Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: ClassEval_5
  File "/home/yang/Benchmark/.tmp_test/tmp_test.py", line 20
    nonlocal pos, play_value, play_chord
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'pos' found

Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_decorator
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 0.001s

OK

Result: ['tests_pass']
Checking transformation add_datetime
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 0.001s

OK

Result: ['tests_pass']
Checking transformation add_time
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 1.753s

OK

Result: ['tests_pass']
Checking transformation add_http
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 1.762s

OK

Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 1.782s

OK

Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 1.785s

OK

Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 1.788s

OK

Result: ['tests_pass']
The file 'reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_5.py' has been formatted successfully.
Checking reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_5.py
*Running tests for: ClassEval_5
...............
----------------------------------------------------------------------
Ran 15 tests in 1.786s

OK

Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_decorator',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil',
                        'changing_AugAssign'],
  'diff_output': 'reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_5.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/classeval/',
  'exception': None,
  'file_id': 'ClassEval_5',
  'genetic_algorithm': None,
  'original_code': 'class AutomaticGuitarSimulator:\n'
                   '\n'
                   '    def __init__(self, text) -> None:\n'
                   '        self.play_text = text\n'
                   '\n'
                   '    def interpret(self, display=False):\n'
                   '        if not self.play_text.strip():\n'
                   '            return []\n'
                   '        else:\n'
                   '            play_list = []\n'
                   "            play_segs = self.play_text.split(' ')\n"
                   '            for play_seg in play_segs:\n'
                   '                pos = 0\n'
                   '                for ele in play_seg:\n'
                   '                    if ele.isalpha():\n'
                   '                        pos += 1\n'
                   '                        continue\n'
                   '                    break\n'
                   '                play_chord = play_seg[0:pos]\n'
                   '                play_value = play_seg[pos:]\n'
                   "                play_list.append({'Chord': play_chord, "
                   "'Tune': play_value})\n"
                   '                if display:\n'
                   '                    self.display(play_chord, play_value)\n'
                   '            return play_list\n'
                   '\n'
                   '    def display(self, key, value):\n'
                   "        return 'Normal Guitar Playing -- Chord: %s, Play "
                   "Tune: %s' % (key, value)",
  'patch_path': 'reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_5.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/classeval/code//ClassEval_5.py',
  'target_file': 'reasoning_transformation_classeval/ClassEval/3ad1e93cfed65451f71dd1d0768a262e7e4afa36/Transformation/ClassEval_5.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 15.326995,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    base64.b64encode(b'45541692632228581825')\n"
                      '    return dec_result\n'
                      'LoopChecker112 = [110][0]\n'
                      'LoopChecker212 = 109\n'
                      '\n'
                      'class AutomaticGuitarSimulator:\n'
                      '\n'
                      '    @my_decorator\n'
                      '    def __init__(self, text) -> None:\n'
                      "        HTTPConnection('google.com', port=80)\n"
                      '        self.play_text = text\n'
                      '\n'
                      '    def interpret(self, display=False):\n'
                      '        ConditionChecker110 = 946\n'
                      '        ttest_ind([83, 63, 10], [7, 37, 3])\n'
                      '        shuffle([49, 55, 19])\n'
                      '        ConditionChecker210 = 758\n'
                      '        if ConditionChecker110 & ConditionChecker210:\n'
                      '            if not self.play_text.strip():\n'
                      '                return []\n'
                      '            else:\n'
                      '                newplay_list_1 = []\n'
                      "                play_segs = self.play_text.split(' ')\n"
                      '                for LoopIndexOut in '
                      'range(LoopChecker112 // LoopChecker212):\n'
                      '                    for play_seg in play_segs:\n'
                      '                        pos = 0\n'
                      '                        for ele in play_seg:\n'
                      '                            if ele.isalpha():\n'
                      '                                pos = pos + 1\n'
                      '                                continue\n'
                      '                            break\n'
                      '                        play_chord = play_seg[0:pos]\n'
                      '                        play_value = play_seg[pos:]\n'
                      "                        newplay_list_1.append({'Chord': "
                      "play_chord, 'Tune': play_value})\n"
                      '                        if display:\n'
                      '                            self.display(play_chord, '
                      'play_value)\n'
                      '                else:\n'
                      '                    pass\n'
                      '                return newplay_list_1\n'
                      '\n'
                      '    def display(self, key, value):\n'
                      '        datetime.datetime.now()\n'
                      '        Fernet.generate_key()\n'
                      "        parse('2024-10-15 02:10:07')\n"
                      '        time.sleep(0.25)\n'
                      "        return 'Normal Guitar Playing -- Chord: %s, "
                      "Play Tune: %s' % (key, value)"}
[END] processing file: ClassEval_5. Total Time: 15.326995
END AT 2024-10-15 02:10:12.486612
